server: provide xwayland_shell global
Currently, this does absolutely nothing of value because it is not
connected to anything else which would do stuff. The X window manager
module (when that is finished) will probably be the one to provide the
server_view implementation for Xwayland toplevels.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -27,6 +27,7 @@ executable('waywall',
   'server/xdg_shell.c',
   'server/xserver.c',
   'server/xwayland.c',
+  'server/xwayland_shell.c',
   'util/log.c',
   'util/prelude.c',
   'util/str.c',
