server: provide wl_drm global
This does appear to placate Xwayland, as there's no longer a log line
complaining about failing to initialize Glamor.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -17,6 +17,7 @@ executable('waywall',
   'server/ui.c',
   'server/wl_compositor.c',
   'server/wl_data_device_manager.c',
+  'server/wl_drm.c',
   'server/wl_output.c',
   'server/wl_seat.c',
   'server/wl_shm.c',
