--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -29,6 +29,7 @@ executable('waywall',
   'server/xserver.c',
   'server/xwayland.c',
   'server/xwayland_shell.c',
+  'server/xwm.c',
   'util/log.c',
   'util/prelude.c',
   'util/str.c',
@@ -59,6 +60,9 @@ executable('waywall',
     xkbcommon,
 
     xcb,
+    xcb_composite,
+    xcb_errors,
+    xcb_res,
     xwayland,
   ],
 
