server: add X11 codepath for fake_input
Unfortunately, the only way to send synthetic inputs using the Wayland
protocol is by giving the target surface input focus. This is a problem
for initially pausing on world load (if needed), since SpeedrunIGT will
count it as the start of the run due to the window being focused.

Having a separate codepath for Xwayland toplevels allows for sending
synthetic input events without giving input focus, since the X11
protocol does not use the same enter/leave mechanism as Wayland.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -12,6 +12,7 @@ waywall_src = [
   'server/backend.c',
   'server/buffer.c',
   'server/cursor.c',
+  'server/fake_input.c',
   'server/remote_buffer.c',
   'server/server.c',
   'server/ui.c',
