meson: improve __FILE__ expansion
Previously, the __FILE__ macro would start with a `../` (e.g. `main.c`
would turn into `../main.c`). Now, it is better and expands to
`waywall/main.c`.

This trick for fixing the path is from wlroots.

--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,42 @@ includes = include_directories('include')
 
 cc = meson.get_compiler('c')
 
+# Remove path start from __FILE__ macro expansion (from wlroots)
+source_root = meson.current_source_dir().split('/')
+build_root = meson.global_build_root().split('/')
+relative_dir_parts = []
+i = 0
+in_prefix = true
+foreach p : build_root
+    if i >= source_root.length() or not in_prefix or p != source_root[i]
+        in_prefix = false
+        relative_dir_parts += '..'
+    endif
+    i += 1
+endforeach
+i = 0
+in_prefix = true
+foreach p : source_root
+    if i >= build_root.length() or not in_prefix or build_root[i] != p
+        in_prefix = false
+        relative_dir_parts += p
+    endif
+    i += 1
+endforeach
+relative_dir = join_paths(relative_dir_parts) + '/'
+
+if cc.has_argument('-fmacro-prefix-map=/prefix/to/hide=')
+    add_project_arguments(
+        '-fmacro-prefix-map=@0@='.format(relative_dir),
+        language: 'c',
+    )
+endif
+
+# Compile-time dependencies
+wayland_protocols = dependency('wayland-protocols')
+wayland_scanner = dependency('wayland-scanner')
+
+# Runtime dependencies
 libzip = dependency('libzip')
 luajit = dependency('luajit')
 wayland_client = dependency('wayland-client')
@@ -37,9 +73,7 @@ waywall_deps = [
   xkbcommon,
 ]
 
-wayland_protocols = dependency('wayland-protocols')
-wayland_scanner = dependency('wayland-scanner')
-
+# Xwayland support
 if get_option('xwayland').enabled()
   waywall_deps += dependency('xcb')
   waywall_deps += dependency('xcb-composite')
