util: move sysinfo logging to separate module
I don't want the system information to be logged before the cmd_*
function (cmd_run, cmd_wrap) has a chance to set the log file so that it
can be included in the file.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -31,6 +31,7 @@ waywall_src = files(
   'util/prelude.c',
   'util/str.c',
   'util/syscall.c',
+  'util/sysinfo.c',
   'cmd_cpu.c',
   'cmd_exec.c',
   'cmd_run.c',
