--- a/meson.build
+++ b/meson.build
@@ -77,6 +77,7 @@ if get_option('xwayland').enabled()
   waywall_deps += dependency('xcb-composite')
   waywall_deps += dependency('xcb-errors')
   waywall_deps += dependency('xcb-res')
+  waywall_deps += dependency('xcb-xtest')
   waywall_deps += dependency('xwayland')
 
   add_project_arguments(
