config, wrap: cleanup lua management code
This commit moves the vast majority of the Lua VM management logic
(coroutines, debug hooks, etc) into the `waywall/config/vm.c` file
instead of having it scattered throughout the entire config module.

Notable changes include:

  - No more metatables. These are a pain to use, have a non-zero
    performance cost, and are unlikely to catch any type confusion
    errors.
  - The new waker infrastructure should allow users to use the coroutine
    table in their code once again, since it is capable of catching and
    handling invalid coroutine yields.
  - Going forward, all wakers will be destroyed when their owning
    config_vm is destroyed. This means that each waker implementation
    has to ensure it will never attempt to call `config_vm_resume` with
    a stale handle.
      - This causes one regression which will soon be fixed. See below.
  - Coroutine execution now has the instruction limit hook applied.
  - The instruction limit hook is now always installed; however, it may
    still not fire if the JIT is enabled. This is due to the
    implementation of LuaJIT.
  - The embedded Lua chunks are now given nicer names (for error logs)
    than they were before (no more ugly __ prefix).

There is currently one regression, though, which is that timer wakers
still live across hot-reloads and cause a crash. I am aware of this and
will fix it in the next commit by improving the timer module's API.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,10 +1,10 @@
 subdir('lua')
 
 waywall_src = files(
-  'config/action.c',
   'config/api.c',
   'config/config.c',
   'config/internal.c',
+  'config/vm.c',
   'server/backend.c',
   'server/buffer.c',
   'server/cursor.c',
