gl: move to server module

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -9,6 +9,7 @@ waywall_src = files(
   'server/buffer.c',
   'server/cursor.c',
   'server/fake_input.c',
+  'server/gl.c',
   'server/remote_buffer.c',
   'server/server.c',
   'server/ui.c',
@@ -29,7 +30,6 @@ waywall_src = files(
   'util/syscall.c',
   'util/sysinfo.c',
   'util/zip.c',
-  'gl.c',
   'inotify.c',
   'instance.c',
   'main.c',
