glsl: add basic shader program
This is used by the GL module and is enough to crop and stretch instance
mirrors.

The only other planned feature for the shader program is color-keying.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,3 +1,4 @@
+subdir('glsl')
 subdir('lua')
 
 waywall_src = files(
@@ -50,6 +51,7 @@ endif
 
 executable('waywall',
   waywall_src,
+  waywall_glsl,
   waywall_lua,
   protocol_headers,
   protocol_sources,
