--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -1,4 +1,3 @@
-subdir('glsl')
 subdir('lua')
 
 waywall_src = files(
@@ -10,7 +9,6 @@ waywall_src = files(
   'server/buffer.c',
   'server/cursor.c',
   'server/fake_input.c',
-  'server/gl.c',
   'server/remote_buffer.c',
   'server/server.c',
   'server/ui.c',
@@ -40,6 +38,13 @@ waywall_src = files(
   'wrap.c',
 )
 
+if get_option('opengl').enabled()
+  subdir('glsl')
+
+  waywall_src += files('server/gl.c')
+  waywall_src += waywall_glsl
+endif
+
 if get_option('xwayland').enabled()
   waywall_src += files(
     'server/xserver.c',
@@ -51,7 +56,6 @@ endif
 
 executable('waywall',
   waywall_src,
-  waywall_glsl,
   waywall_lua,
   protocol_headers,
   protocol_sources,
