meson: set minimum meson version to 1.3.0

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,7 @@
 project('waywall', 'c',
   version: '0.0.0',
   license: 'GPL3',
+  meson_version: '>=1.3.0',
   default_options: [
     'c_std=c11',
     'warning_level=2',
