scene, server: move rendering code to scene module
Having both the EGL/OpenGL initialization and normal frame rendering
code together in one module is a bit confusing (and it's also quite
a bit of code in one file, although that's not unmanageable.)

`server/gl.c` is now entirely for EGL/OpenGL initialization and
making EGL API calls (e.g. importing DMABUFs as textures). The new scene
module handles the creation and rendering of various "scene" elements
like mirrors and images.

--- a/waywall/glsl/meson.build
+++ b/waywall/glsl/meson.build
@@ -2,8 +2,8 @@ luajit_cmd = find_program('luajit')
 embed_lua = find_program('./embed.lua', native: true)
 
 waywall_glsl_files = [
-  'main.frag',
-  'main.vert',
+  'texcopy.frag',
+  'texcopy.vert',
 ]
 
 waywall_glsl = []
