server: provide wp_linux_drm_syncobj_manager_v1
Unfortunately, Mesa doesn't appear to implement any explicit sync
support in EGL on Wayland. Zink doesn't seem to work in any capacity on
Wayland, which also doesn't help. RADV does support the syncobj
protocol, though, so Vulkan applications can be used for testing.

`vkcube` seemed to work without issue but it's not a wonderful test
candidate. I will need to test more later.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -22,6 +22,7 @@ waywall_src = files(
   'server/wl_shm.c',
   'server/wp_pointer_constraints.c',
   'server/wp_linux_dmabuf.c',
+  'server/wp_linux_drm_syncobj.c',
   'server/wp_relative_pointer.c',
   'server/xdg_decoration.c',
   'server/xdg_shell.c',
