--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -15,6 +15,7 @@ protocol_xmls = [
   wp_dir + 'stable/linux-dmabuf/linux-dmabuf-v1.xml',
   wp_dir + 'stable/viewporter/viewporter.xml',
   wp_dir + 'stable/xdg-shell/xdg-shell.xml',
+  wp_dir + 'staging/alpha-modifier/alpha-modifier-v1.xml',
   wp_dir + 'staging/cursor-shape/cursor-shape-v1.xml',
   wp_dir + 'staging/tearing-control/tearing-control-v1.xml',
   wp_dir + 'staging/linux-drm-syncobj/linux-drm-syncobj-v1.xml',
