BETA BUILD ---- ONLY ARCH BUILDS FOR NOW
- Added distro selector
- Added --arch --fedora and --debian arguments
- Added cleanup on error
- Moved build scripts to /contrib
- Moved output to /waywall-build (hardcoded for now)
- Moved GLFW output to outputdir
- Added more cleaning steps
- Modified gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 book
 build
+waywall-build
+/contrib/debian/debhelper-build-stamp
+/contrib/debian/waywall.substvars
+/contrib/debian/files
+/contrib/debian/.debhelper
 
 # clangd
 .cache
