--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -2,7 +2,7 @@ Source: waywall
 Section: games
 Priority: optional
 Maintainer: ByPaco10 <tesselslate>
-Build-Depends: debhelper-compat (= 13), wayland-protocols, meson, build-essential, git, libspng-dev, libluajit-5.1-dev, libwayland-dev, libxkbcommon-dev, xwayland, cmake, wayland-protocols, wayland-scanner++,
+Build-Depends: debhelper-compat (= 13), clang, wayland-protocols, meson, build-essential, git, libspng-dev, libluajit-5.1-dev, libwayland-dev, libxkbcommon-dev, xwayland, cmake, wayland-protocols, wayland-scanner++,
 Standards-Version: 4.6.2
 Homepage: https://github.com/tesselslate/waywall
 
